Fixed line wrapping issue in toolbar caused by search text box
- Added user profile picture to navbar
- Username will not be visible between 768px and 992px (avatar will
still trigger dropdown menu)

--- a/public/backend/css/styles.css
+++ b/public/backend/css/styles.css
@@ -167,6 +167,11 @@ a.btn {
     color: #609D02;
 }
 
+.navbar-default .input-group-btn .btn-default {
+    border: 1px solid #ccc;
+    padding: 6px 12px;
+}
+
 /******************************************************************************
  * Breadcrumbs                                                                *
  ******************************************************************************/
